build(ci): add sonar scan to pipeline